--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,8 @@ on:
 jobs:
   merge-branches:
     runs-on: ubuntu-latest
-    env:
-      ENVIRONMENT: ${{ github.event.inputs.environment }}
     steps:
-      - name: Checkout code (Env: ${{ github.event.inputs.environment }})
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
