--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Create temporary branch
         run: |
           git checkout -b ${{ steps.generate-branch-name.outputs.branch_name }}
+          git push origin ${{ steps.generate-branch-name.outputs.branch_name }}
 
   merge-branches:
     needs: [ create-tmp-branches ]
@@ -47,8 +48,8 @@ jobs:
       - name: Checkout temporary branch
         run: |
           git fetch
-          git checkout ${{ env.TMP_BRANCH_NAME }}
-          git pull
+          git checkout -b ${{ env.TMP_BRANCH_NAME }}
+          git pull -u origin ${{ env.TMP_BRANCH_NAME }}
 
       - name: Merge selected branches
         id: merge
@@ -67,7 +68,7 @@ jobs:
         
       - name: Push temporary branch
         run: |
-          git push origin ${{ steps.generate-branch-name.outputs.branch_name }}
+          git push origin ${{ env.TMP_BRANCH_NAME }}
 
       - name: Check for merge conflicts
         if: steps.merge.outcome == 'failure'
@@ -75,7 +76,3 @@ jobs:
           echo "Merge conflicts have occurred. Please manually resolve the conflicts and try again."
           exit 1
 
-      - name: Push temporary branch
-        if: steps.merge.outcome == 'success'
-        run: |
-          git push origin ${{ steps.generate-branch-name.outputs.branch_name }}
