--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           branches="${{ github.event.inputs.branches }}"
           for branch in $branches; do
-            if ! git merge --no-ff $branch; then
+            if ! git merge --no-ff origin/$branch; then
               echo "Merge conflict detected when merging branch $branch "
               echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
               COMMIT_HASH=$(git rev-parse $branch)
