--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
 #              echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
 #              exit 1
 #            fi
-          done
+#          done
 
       - name: Check status
         run: git status
