--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
           branches="${{ github.event.inputs.branches }}"
           for branch in $branches; do
                echo "origin/$branch"
+          done
 #            if ! git merge --no-ff origin/$branch; then
 #              echo "Merge conflict detected when merging branch $branch "
 #              echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
