--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,19 +62,16 @@ jobs:
           git branch
           branches="${{ github.event.inputs.branches }}"
           for branch in $branches; do
-               echo "origin/$branch"
+            if ! git merge --no-ff origin/$branch; then
+              echo "Merge conflict detected when merging branch $branch "
+              echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
+              COMMIT_HASH=$(git rev-parse $branch)
+              echo "git merge --no-ff $COMMIT_HASH"
+              echo "You should resolve conflicts and commit and push with below step:"
+              echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
+              exit 1
+            fi
           done
-          git merge --no-ff origin/aaa
-#            if ! git merge --no-ff origin/$branch; then
-#              echo "Merge conflict detected when merging branch $branch "
-#              echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
-#              COMMIT_HASH=$(git rev-parse $branch)
-#              echo "git merge --no-ff $COMMIT_HASH"
-#              echo "You should resolve conflicts and commit and push with below step:"
-#              echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
-#              exit 1
-#            fi
-#          done
 
       - name: Check status
         run: git status
