--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,9 @@ jobs:
           branches="${{ github.event.inputs.branches }}"
           for branch in $branches; do
             if ! git merge --no-ff origin/$branch; then
-              echo "Merge conflict detected when merging branch $branch "
+              echo "Merge conflict detected when merging branch origin/$branch "
               echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
               COMMIT_HASH=$(git rev-parse origin/$branch)
-#              echo "::set-output name=branch_hash::${COMMIT_HASH}"
               echo "git merge --no-ff $COMMIT_HASH"
               echo "You should resolve conflicts and commit and push with below step:"
               echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
