--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,8 +53,7 @@ jobs:
       - name: Checkout temporary branch
         run: |
           git fetch origin
-          git branch
-          git checkout -b ${{ env.TMP_BRANCH_NAME }}
+          git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}
 
       - name: Merge selected branches
         id: merge
