--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,12 +64,8 @@ jobs:
           for branch in $branches; do
             if ! git merge --no-ff origin/$branch; then
               echo "Merge conflict detected when merging branch origin/$branch "
-              echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
               COMMIT_HASH=$(git rev-parse origin/$branch)
               echo "CONFLICT_BRANCH_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-              echo "git merge --no-ff $COMMIT_HASH"
-              echo "You should resolve conflicts and commit and push with below step:"
-              echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
               exit 1
             fi
           done
@@ -85,6 +81,9 @@ jobs:
         if: steps.merge.outcome == 'failure'
         run: |
           echo "Merge conflicts have occurred. Please manually resolve the conflicts and try again."
-          echo "${{env.COMMIT_HASH}}"
+          echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
+          echo "git merge --no-ff ${{env.CONFLICT_BRANCH_HASH}}"
+          echo "You should resolve conflicts and commit and push with below step:"
+          echo "git push origin ${{ env.TMP_BRANCH_NAME }}"           
           exit 1
 
