--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,10 +80,10 @@ jobs:
       - name: Check for merge conflicts
         if: steps.merge.outcome == 'failure'
         run: |
-          echo "Merge conflicts have occurred. Please manually resolve the conflicts and try again."
+          echo "Merge conflicts have occurred. Please manually resolve the conflicts and try again with the follow steps:"
           echo "git fetch origin; git checkout -b ${{ env.TMP_BRANCH_NAME }} origin/${{ env.TMP_BRANCH_NAME }}"
           echo "git merge --no-ff ${{env.CONFLICT_BRANCH_HASH}}"
-          echo "You should resolve conflicts and commit and push with below step:"
+          echo "You should resolve conflicts and commit then push it."
           echo "git push origin ${{ env.TMP_BRANCH_NAME }}"           
           exit 1
 
