--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,12 @@ jobs:
           echo "asc_branch_name=${asc_branch_name}" >> $GITHUB_OUTPUT
           echo "${asc_branch_name}"
 
+      - name: Debug output
+        run: |
+          echo "当前工作目录: $(pwd)"
+          echo "文件列表:"
+          ls -l
+
       - name: Process multiple_branch.json
         run: |
           if [ -f "multiple_branch.json" ]; then
