--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,10 @@ jobs:
 
 
       - name: Download Artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: tmp-branch-artifact
+          path: multiple_branch.json
       - name: Display structure of downloaded files
         run: ls -R
 
