--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,18 +25,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Generate data
-        id: generate
-        run: |
-          data='{ "branch_name": "test" }'
-          echo "Generated data: $data"
-          echo "$data" > bdata.txt
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: bdata
-          path: bdata.txt
+#      - name: Generate data
+#        id: generate
+#        run: |
+#          data='{ "branch_name": "test" }'
+#          echo "Generated data: $data"
+#          echo "$data" > bdata.txt
+#
+#      - name: Upload Artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: bdata
+#          path: bdata.txt
 
       - name: Download Artifact
         uses: actions/download-artifact@v4
