--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,11 @@ jobs:
 #          name: bdata
 #          path: bdata.txt
 
+      - name: Read data from the cached file
+        if: steps.cache-data.outputs.cache-hit == 'true'
+        run: |
+          cat cdata.txt
+
       - name: Restore cache
         id: cache-data
         uses: actions/cache@v4
@@ -48,7 +53,7 @@ jobs:
       - name: Initialize data if cache miss
         if: steps.cache-data.outputs.cache-hit != 'true'
         run: |
-          echo "Initializing data..."
+          echo "Initializing data...2"
           echo "This is the initial data." > cdata.txt
 
       - name: Use the data
